# resume_tailor

./: .gitignore  README.md  pyproject.toml  run
src/resume_tailor/: cli.py  interactive.py  jd.py  latex.py  llm.py  prompts.py  resume.py  score.py  storage.py  tailor.py
